--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>index</title>
+	<title>Index1</title>
 
 	<!-- Bootstrap js files -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -24,17 +24,18 @@
 	<!-- dc CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.min.css" type="text/css" />
 	<!-- d3 charting library -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.0/d3.min.js"
+		integrity="sha256-m0QmIsBXcOMiETRmpT3qg2IQ/i0qazJA2miCHzOmS1Y=" crossorigin="anonymous"></script>
 	<!-- Crossfilter charting library -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js">
-	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"
+		integrity="sha256-T9tvV3x+/vCnCoFciKNZwbaJ46q9lh6iZjD0ZjD95lE=" crossorigin="anonymous"></script>
 	<!-- dc charting library -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dc/3.2.0/dc.min.js"
+		integrity="sha256-G6hLu4NCF+gL+fRT5uI3mUrqWLJh6p9UACtYSxKS+yk=" crossorigin="anonymous"></script>
 	<!-- queue charting library -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-queue/1.0.7/d3-queue.min.js"></script>
-
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js" integrity="sha256-wvO537iwaZblh5EKbL0aQlyjjtADksAZ1fqH/U0zdmA=" crossorigin="anonymous"></script>-->
 	<!--My JavaScript link-------------->
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/main1.js"></script>
 	<!--My css link-------------->
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
@@ -49,10 +50,10 @@
 		</div>
 		<div class="container test-notice">
 			<p>NOTE -
-				<em>This page uses the outdated library version links and is controlled by JavaScript code written on main.js. It shows the desired output I am trying to achieve.</em>
+				<em>This page uses the most recent library version links and is controlled by JavaScript code written on main1.js. It shows the errors on desired output I am trying to achieve.</em>
 			</p>
-			<p><em>Click button below to view page display using the most up to date library versions</em></p>
-			<a class="btn btn-danger" href="index1.html" role="button">View new page</a>
+			<p><em>Click button below to view original display.</em></p>
+			<a class="btn btn-danger" href="index.html" role="button">View original page</a>
 		</div>
 		<div class="container intro">
 			<p>Kids love to see how they're doing and how they compare to each other. Select a name from the drop down
