--- a/index1.html
+++ b/index1.html
@@ -137,7 +137,7 @@
 						<h5>Total Goals Per Person</h5>
 					</div>
 					<div class="row justify-content-center">
-						<div id="per-person-chart"></div>
+						<div id="goals-per-person-piechart"></div>
 					</div>
 					<div class="row">
 						<p>This chart shows the number of goals each player has scored compared to the total goals
@@ -151,7 +151,7 @@
 						<h5>Total Goals Per Opponent</h5>
 					</div>
 					<div class="row justify-content-center">
-						<div id="per-store-chart"></div>
+						<div id="goals-per-opponent-piechart"></div>
 					</div>
 					<div class="row">
 						<p>This chart shows the number of goals scored against the various opponents faced.</p>
