--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Index1</title>
+	<title>index1</title>
 
 	<!-- Bootstrap js files -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -16,7 +16,7 @@
 	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-	</script> 
+	</script>
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -24,16 +24,15 @@
 	<!-- dc CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.min.css" type="text/css" />
 	<!-- d3 charting library -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.0/d3.min.js"
-		integrity="sha256-m0QmIsBXcOMiETRmpT3qg2IQ/i0qazJA2miCHzOmS1Y=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 	<!-- Crossfilter charting library -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"
-		integrity="sha256-T9tvV3x+/vCnCoFciKNZwbaJ46q9lh6iZjD0ZjD95lE=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js">
+	</script>
 	<!-- dc charting library -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/dc/3.2.0/dc.min.js"
-		integrity="sha256-G6hLu4NCF+gL+fRT5uI3mUrqWLJh6p9UACtYSxKS+yk=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
 	<!-- queue charting library -->
-	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js" integrity="sha256-wvO537iwaZblh5EKbL0aQlyjjtADksAZ1fqH/U0zdmA=" crossorigin="anonymous"></script>-->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-queue/1.0.7/d3-queue.min.js"></script>
+
 	<!--My JavaScript link-------------->
 	<script type="text/javascript" src="js/main1.js"></script>
 	<!--My css link-------------->
@@ -50,10 +49,10 @@
 		</div>
 		<div class="container test-notice">
 			<p>NOTE -
-				<em>This page uses the most recent library version links and is controlled by JavaScript code written on main1.js. It shows the errors on desired output I am trying to achieve.</em>
+				<em>This page uses the outdated library version links and is controlled by JavaScript code written on main1.js. It shows the desired output I am trying to achieve.</em>
 			</p>
-			<p><em>Click button below to view original display.</em></p>
-			<a class="btn btn-danger" href="index.html" role="button">View original page</a>
+			<p><em>Click button below to view page display using the most up to date library versions</em></p>
+			<a class="btn btn-danger" href="index.html" role="button">View new functionality</a>
 		</div>
 		<div class="container intro">
 			<p>Kids love to see how they're doing and how they compare to each other. Select a name from the drop down
@@ -61,12 +60,14 @@
 		</div>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div id="select1"></div> 
+				<div id="select1">
+
+				</div>
 			</div>
 		</div>
 
 
-		<div class="container-fluid">              
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
@@ -89,9 +90,9 @@
 					</div>
 					<div class="container">
 						<div style="width:100%">
-							<div id="ratings-composite-chart"></div>
+							<div id="composite-chart"></div>
 						</div>
-					</div> 
+					</div>
 					<div class="row justify-content-center">
 						<p>This chart shows the match rating each player has acquired each matchday week.</p>
 					</div>
@@ -120,7 +121,7 @@
 						<div style="width:100%">
 							<div id="goals-per-opponent-chart"></div>
 						</div>
-					</div> 
+					</div>
 					<div class="row justify-content-center">
 						<p>This chart shows the number of goals and assists made against each opponent played.</p>
 					</div>
@@ -135,7 +136,7 @@
 						<h5>Total Goals Per Person</h5>
 					</div>
 					<div class="row justify-content-center">
-						<div id="goals-per-person-piechart"></div>
+						<div id="per-person-chart"></div>
 					</div>
 					<div class="row">
 						<p>This chart shows the number of goals each player has scored compared to the total goals
@@ -149,7 +150,7 @@
 						<h5>Total Goals Per Opponent</h5>
 					</div>
 					<div class="row justify-content-center">
-						<div id="goals-per-opponent-piechart"></div>
+						<div id="per-store-chart"></div>
 					</div>
 					<div class="row">
 						<p>This chart shows the number of goals scored against the various opponents faced.</p>
