--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-6 chart">
+				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
 						<h5><em>(Chart 5)</em> Total Goals Per Person</h5>
 					</div>
@@ -144,7 +144,7 @@
 					</div>
 				</div>
 
-				<div class="col-6 chart">
+				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
 						<h5><em>(Chart 6)</em> Total Goals Per Opponent</h5>
 					</div>
