--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<div class="row justify-content-center">
 						<div class="col-6">
 							<div id="count-goals-per-person"></div>
-							
+
 						</div>
 						<div class="col-6">
 							<div id="goals-per-person-piechart"></div>
@@ -149,7 +149,7 @@
 						</p>
 					</div>
 				</div>
- 
+
 				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
 						<h5><em>(Chart 6)</em> Total Goals Per Opponent</h5>
@@ -157,7 +157,7 @@
 					<div class="row justify-content-center">
 						<div class="col-6">
 							<div id="count-goals-per-opponent">
-								
+
 							</div>
 						</div>
 						<div class="col-6">
@@ -168,6 +168,19 @@
 						<p>This chart shows the number of goals scored against the various opponents faced.</p>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div id='data-table'>
+				<!-- create a custom header -->
+				<div class='header'>
+					<span>Name</span>
+					<span>Matches</span>
+					<span>Goals</span>
+					<span>Assists</span>
+					<span>Avg Rating</span>
+				</div>
+				<!-- data rows will filled in here -->
 			</div>
 		</div>
 		<div class="container">
