--- a/index1.html
+++ b/index1.html
@@ -34,7 +34,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-queue/1.0.7/d3-queue.min.js"></script>
 
 	<!--My JavaScript link-------------->
-	<script type="text/javascript" src="js/main1.js"></script>
+	<!--<script type="text/javascript" src="js/main1.js"></script>-->
 	<!--My css link-------------->
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
