--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-
+<a href="index1.html">Visit index1.html</a>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-12 text-center heading">
